# ctdcal

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  COOKBOOK.md  Converter.ipynb  Cookbook.md  GS3601101.converted.REMOVED.git-id  GS3601101.hex.REMOVED.git-id  INSTALL.md  LICENSE.md  MANIFEST.in  README  README.ctd_process  README.md  REFT_PARSER.ipynb  RELEASE.md  SALT_PARSER.ipynb  SETUP.md  TODO.md  all_salt_standard_dials.csv  bottle.py  bottleNewStyle.py  bottle_lib.py  config.py  configuration.ini  conversions.py  convert.py  convert_format.py  converter_scaffolding.py  ctd_to_bottle.py  ctdcal_template.ipynb  db_example.py  db_lib.py  db_load_SBE35.py  db_load_scripts.py  (+49 more)
.github/workflows/: publish-to-pypi.yml  publish-to-testpypi.yml  run-tests.yml
ctdcal/: CR_Calib.py  __init__.py  __main__.py  _version.py  cfg.yaml  common.py  config.py  config_GTC.py  convert.py  ctd_io.py  ctd_plots.py  equations_sbe.py  fit_ctd.py  flagging.py  io.py  libODF_convert.py  libODF_fit_ctd.py  libODF_precalibration.py  libODF_process_ctd.py  libODF_sbe_reader.py  merge_codes.py  odf_io.py  odf_process_all_new.py  osnap_oxy.py  oxy_fitting.py  oxy_fitting_ver2.py  precalibration.py  process_bottle.py  process_ctd.py  proj_io.py  report_ctd.py  rinko.py  salts.py  salts_io.py  sbe_convert.py  sbe_equations_dict.py  sbe_reader.py  sensor_lookup.yaml  settings.py  user_settings.yaml
ctdcal/fitting/: common.py  fit_common.py  fit_ctd.py  fit_legacy.py  fit_oxy.py  fit_oxy_rinko.py
ctdcal/fitting/tests/: test_common.py
ctdcal/flagging/: flag_common.py
ctdcal/formats/: exchange.py
ctdcal/parsers/: __init__.py  all_bottle_xlsx.py  parse_ctd_xmlcon.py  parse_rbr_duet_pt.py  parse_sbe35.py
ctdcal/parsers/test/: test_parse_rbr_duet_pt.py
ctdcal/plotting/: plot_ctd.py  plot_fit.py
ctdcal/processors/: cast_tools.py  convert_legacy.py  functions_aux.py  functions_ctd.py  functions_oxy.py  functions_salt.py  proc_bottle.py  proc_oxy_ctd.py  proc_oxy_odf.py  proc_reft.py  proc_reft_rbr.py  proc_salt_odf.py
ctdcal/processors/tests/: test_cast_tools.py
ctdcal/reporting/: report_odf.py
ctdcal/scripts/: cruise_report.py  cruise_report_odf.py  ctd_to_bottle.py  gp17_process_all.py  ices_process_all.py  odf_codes_plots.py  odf_convert_sbe.py  odf_process_all.py  odf_process_all_p02.py  odf_process_bio.py  odf_process_bottle.py  odf_process_reuse.py  odf_process_test.py  odf_quickplot.py  process_ices.py  quick_convert.py  whoi_process_all.py
ctdcal/scripts/institutions/odf/: init_odf.py
ctdcal/tests/: test_cast_tools.py  test_common.py  test_convert.py  test_ctd_io.py  test_ctd_plots.py  test_equations_sbe.py  test_fit_ctd.py  test_flagging.py  test_io.py  test_main.py  test_odf_io.py  test_oxy_fitting.py  test_process_bottle.py  test_process_ctd.py  test_rinko.py  test_salts.py  test_split_35.py
ctdcal/tests/data/: 90909.XMLCON
ctdcal/tools/: add_newline.sh  bokeh_btl_data_flagging.py  bokeh_ctd_data_flagging.py  cast_tools.py  data_qc copy 2.py  data_qc.py  data_qc_new.py  data_vis.py  edit_flags.py  header_lookup.py  oxy_vis.py  rbr_comparison.py  split_35.py
ctdcal/tools/qc_demo/: edit_flags.py  qc_demo_app.py  qc_plot.py
db/: odf.db
docs/: Makefile  README  api.rst  conf.py  ctdcal.rst  index.rst  make.bat  tutorials.rst
docs/_templates/: custom-module-template.rst
docs/notebooks/: calibration.ipynb  intro.ipynb  intro.py  plotting.ipynb
lib/: libODF_odf_io.py  libODF_report_ctd.py  libODF_web_viewer.py
old/: eng_to_sci_convert.py  sbe_equations.py  sbe_xml_reader.py
scripts/: convert_format.py  ctd_to_bottle.py  odf_bottle_combine.py  odf_calibrate_ctd.py  odf_codes_plots.py  odf_convert_sbe.py  odf_fit_ctd.py  odf_process_all.py  odf_process_all_MK.py  odf_process_all_new.py  odf_process_bottle.py  odf_process_ctd.py  odf_reft_parser.py  odf_salt_parser.py  odf_salts_correcter.py  odf_sbe_metadata.py  oxy_fit_script.py  oxy_fitting.py  oxygen_offset.py  pressureoffset.py  template_script.py
scripts/institutions/odf/: init_odf.py
tools/: batch_plot.sh  bokeh_ctd_data_flagging.py  bokeh_data_flagging.py  common.py  data_qc.py  header_lookup.py  plot_reft.py  plot_rinko.py  salt_flags_handcoded.csv  split_35.py
