[build-system]
requires = ["setuptools>=30.3.0", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "ctdcal/_version.py"
write_to_template = 'version = "{version}"'

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.11
files = "ctdcal/io.py"

[[tool.mypy.overrides]]
module = [
    "pandas",
    "numpy",
    "requests"
]
ignore_missing_imports = true