[metadata]
name = ctdcal
author =
    Joseph Gum
    Andrew Barna
    Michael Kovatch
author-email = mkovatch@ucsd.edu
home-page = https://github.com/cchdo/ctdcal
description = CTD and bottle data processing package from UCSD ODF
long_description = file: README.md
license_file = LICENSE.md
platform = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
keywords =
    oceanography
    seawater
    TEOS-10
    ctd
    calibration

[options]
python_requires = >=3.7
packages =
    ctdcal
    ctdcal.scripts
    # update if more subpackages are created
    # or try again using setuptools "find:" (fails with ctdcal/ctdcal/ architecture)
install_requires =
    cmocean
    click
    gsw >= 3.2
    matplotlib
    numpy >= 1.19.0
    pandas==1.2.1
    scipy

[options.extras_require]
dev =
    appdirs==1.4.3
    black==20.8b1
    cycler==0.10.0
    flake8==3.8.4
    packaging==16.8
    pre-commit==2.10.1
    pyparsing==2.2.0
    requests==2.20.0
    six==1.10.0
docs = 
    Sphinx==3.3.1
    jupyter==1.0.0
    furo
complete = 
    %(dev)s
    %(docs)s


[options.entry_points]
console_scripts =
    ctdcal=ctdcal.__main__:cli

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = ctdcal/_version.py
versionfile_build = ctdcal/_version.py
tag_prefix = v
parentdir_prefix =
