[metadata]
name = ctdcal
author =
    Joseph Gum
    Andrew Barna
    Michael Kovatch
author-email = mkovatch@ucsd.edu
home-page = https://github.com/cchdo/ctdcal
description = CTD and bottle data processing package from UCSD ODF
long_description = file: README.md
license_file = LICENSE.md
platform = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
keywords =
    oceanography
    seawater
    TEOS-10
    ctd
    calibration

[options]
python_requires = >=3.7
packages =
    ctdcal
    ctdcal.scripts
    # update if more subpackages are created
    # or try again using setuptools "find:" (fails with ctdcal/ctdcal/ architecture)
install_requires =
    cmocean==2.0
    click==8.0.1
    gsw==3.4.0
    matplotlib==3.3.2
    numpy==1.19.1
    pandas==1.2.1
    PyYAML==5.4.1
    scipy==1.7.0

[options.extras_require]
dev =
    black
    flake8
    pre-commit
docs = 
    Sphinx==4.2.0
    jupyter==1.0.0
    furo==2021.9.8
complete = 
    %(dev)s
    %(docs)s


[options.entry_points]
console_scripts =
    ctdcal=ctdcal.__main__:cli

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = ctdcal/_version.py
versionfile_build = ctdcal/_version.py
tag_prefix = v
parentdir_prefix =
