[metadata]
name = ctdcal
author = "Joseph Gum, Andrew Barna, Michael Kovatch"
author_email = mkovatch@ucsd.edu
home_page = https://github.com/cchdo/ctdcal
description = CTD and bottle data processing package from UCSD ODF
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE.md
platform = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    # Programming Language :: Python :: 3.8
    # Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
keywords =
    oceanography
    seawater
    TEOS-10
    ctd
    calibration

[options]
python_requires = >=3.8
packages =
    find:
setup_requires = setuptools_scm
include_package_data = True
install_requires =
    click==8.0.1
    gsw
    matplotlib
    numpy < 2.0.0
    pandas
    PyYAML
    requests
    scipy

[options.extras_require]
dev =
    black
    flake8
    isort
    pre-commit
    pytest
docs = 
    Sphinx==7.3.3
    jupyter==1.0.0
    furo==2024.1.29
    nbsphinx==0.9.4
    jupytext
tests =
    %(dev)s
    bokeh
    mypy
    pytest-cov
complete = 
    %(tests)s
    %(docs)s


[options.entry_points]
console_scripts =
    ctdcal=ctdcal.__main__:cli

[flake8]
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9
ignore = 
    E203,
    E266,
    # workaround for jupytext pypercent cell comments
    E302,
    # line too long, handled with black
    E501,
    W503,
    F403
